# force-cop-estimator

./: .gitignore  CMakeLists.txt  README.md  saveTestData.m
app/: CMakeLists.txt  forceCoPEstimationDatadumper.xml
app/applications/: forceCoP.xml  forceCoPEstimation.xml  forceCoPLeft.xml  forceCoPLeftDataCollection.xml  forceCoPRight.xml  forceCoPSIM.xml  forceLeftIndexDC.xml  forceLeftMiddleDC.xml  forceLeftThumbDC.xml  forceRightIndexDC.xml  forceRightIndexDCTakumi.xml  forceRightMiddleDC.xml  forceRightMiddleDCTakumi.xml  forceRightThumbDC.xml  simForceCoPLeft.xml  simForceCoPRight.xml  surfaceExplorationForceCoP.xml
app/contexts/: ANN_activeTaxel_tax_02.ini  forceCoPEstimation.ini  icubLeftIndex.ini  icubLeftIndex_combined.ini  icubLeftLittle.ini  icubLeftLittle_combined.ini  icubLeftMiddle.ini  icubLeftMiddle_combined.ini  icubLeftRing.ini  icubLeftRing_combined.ini  icubLeftThumb.ini  icubLeft_combined.ini  icubLeft_fr100.ini  icubRightIndex.ini  icubRightLittle.ini  icubRightMiddle.ini  icubRightRing.ini  icubRightThumb.ini  icubSimLeftIndex_combined.ini  icubSimLeftMiddle_combined.ini  leftHand_taxelLocations.ini  rightHand_taxelLocations.ini  simLeftIndex.ini  simLeftIndex_ann.ini  simLeftLittle.ini  simLeftMiddle.ini  simLeftRing.ini  simLeftThumb.ini  simLeft_combined.ini  simLeft_fr100.ini
app/yarpscope/: forceTaxel_leftIndex.xml  forceTaxel_leftIndexFT.xml  forceTaxel_leftLittle.xml  forceTaxel_leftMiddle.xml  forceTaxel_leftMiddleFT.xml  forceTaxel_leftRing.xml  forceTaxel_leftThumb.xml  forceTaxel_leftThumbFT.xml  forceTaxel_rightIndex.xml  forceTaxel_rightIndexFT.xml  forceTaxel_rightLittle.xml  forceTaxel_rightMiddle.xml  forceTaxel_rightMiddleFT.xml  forceTaxel_rightRing.xml  forceTaxel_rightThumb.xml  forceTaxel_rightThumbFT.xml  leftIndex_annPosTax.xml  leftIndex_annPosTax_probs.xml
application/: forceCoPEstimation.xml
contexts/: ANN_01.ini  forceCoPEstimation.ini
src/: CMakeLists.txt  force-cop-estimator-control.thrift  forceCoPEstimation.cpp  forceCoPEstimation.h  forceCoPEstimation_ANN.cpp  forceCoPEstimation_ANN.h  main.cpp  neuralNet.cpp  neuralNet.h
src/include/: avrg-force-estimator.h  badModelException.h  contactConditionEstimator.h  forceCoPController.h  forceCoPEstimation.h  forceCoPEstimation_ANN.h  gp-force-cop-estimator.h  gp-forcere-cop-estimator.h  neuralNet.h  wa-cop-estimator.h
src/src/: avrg-force-estimator.cpp  contactConditionEstimator.cpp  forceCoPController.cpp  forceCoPEstimation.cpp  forceCoPEstimation_ANN.cpp  gp-force-cop-estimator.cpp  main.cpp  neuralNet.cpp  wa-cop-estimator.cpp
